   - Recurrent operation validation is now said 'accounting' (todo #1460).
   - Restore assistant let the user display the metadata of the archive (todo #1450).
   - Settlement page: a footer paned let the user align footer amounts with the treeview (todo #1467).
   - Settlement page: homogeneize footer display.
   - User may choose display at startup, and when a dossier is opened or closed.

 Bug fixes:

   - configure.ac: display 'pwirender' plugin build status (todo #1453).
   - Fix conversion to DBModel v37 of OFA_T_BAT table.
   - myISettings: accept and manage a null list when restoring a window.
   - ofaAccountProperties: fix read/write user settings.
   - ofaAdminCredentialsBin: fix read/write in dossier settings (todo #1416).
   - ofaEntryPage: fix initial display of the extended filter (todo #1464).
   - ofaEntryPage: fix operator sensitivity when moving rows (todo #1469).
   - ofaEntryPageDelconf: review dialog layout (todo #1468).
   - ofaEntryStore: fix ENT_TIERS column type.
   - ofaGuidedInputBin: do not override a user-set date when setting a template (todo #1456).
   - ofaHub: fix releasing object with floating references. 
   - ofaMainWindow: better switch back from 'minimal' display mode.
   - ofaPrefs: fix mainbook settings read.
   - ofaReconcilPage: initialize the empty light in the footer.
   - ofaReconcilPage: align header and footer amounts with selection balance.
   - ofaRecurrentRunTreeview: fix refresh bug when cancelling operations.
   - ofoEntry: fix export format for unset counters.

 Other changes:

   - my_utils_window_position_get(): new function.
   - ofaAccountBalance: new (computing) class which implements ofaIExportable.
   - ofaBackupDisplay: new class.
   - ofaIExportable::get_basename(): new method.
   - ofaIExportable::get_published(): new method.
   - ofaIExporter: new interface.
   - ofaIRenderer: interface is completed with font and color getters (todo #1452).